tdf#156980 SwNavigator: Make headings delete even if they have

folded outline content

Change-Id: If952d8d845c2eeec86231014b924f1632d2f5efe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157667
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>